--- a/testando/index.html
+++ b/testando/index.html
@@ -10,14 +10,10 @@
 
     <div id="container_lista">
         <h1>Lista de compras</h1>
-        <input id="produtos" type="text">
-        <button onclick="adicionar()">Adicionar itens</button>
-        <div>
-            <ul id="lista">
-
-            </ul>
-        </div>
-     </div>
+        <input type="text" name="itemLista" id="itemLista" placeholder="Iforme o item...">
+        <button id="criadorDeLista" onclick="adicionar()">Adicionar item</button>
+    </div>
+        
 
 
     <script src="Script.js"></script>
